<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ipv6Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        android:text="@string/enable_ipv6"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:id="@+id/columnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifySwitch">

        <TextView
            android:id="@+id/clashLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:linksClickable="true"
            android:text="@string/label_clash"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/text_size"
            android:visibility="visible" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/clashSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:checked="true"
            android:linksClickable="true"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_lan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:checked="false"
        android:minHeight="48dp"
        android:text="@string/enable_lan"
        android:textSize="@dimen/text_size" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_auto_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:checked="false"
        android:minHeight="48dp"
        android:text="@string/enable_auto_start"
        android:textSize="@dimen/text_size" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_boot_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:checked="false"
        android:minHeight="48dp"
        android:text="@string/enable_boot_start"
        android:textSize="@dimen/text_size" />

</LinearLayout>